fixed footer clipping off screen

--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -1,9 +1,14 @@
 .footer-container {
     display: grid;
     justify-content: center;
-    gap: 20px;
     grid-template-columns: min-content;
+
+    gap: 20px;
     padding: 10px;
+}
+
+.footer-container > img {
+    width: 100%;
 }
 
 @media (max-height: 100vw) {
